fix responsive on mobile

--- a/main.css
+++ b/main.css
@@ -89,22 +89,6 @@ body {
     align-items: center;
 }
 
-.navbar .title {
-    font-size: 1.3rem;
-    margin-left: 0.5rem;
-    cursor: pointer;
-    background-image: linear-gradient( to right, var(--brand_color_one--), var(--brand_color_two--), var(--brand_color_three--), var(--brand_color_four--), var(--brand_color_five--));
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-}
-
-.title span {
-    font-size: 0.8rem;
-    letter-spacing: 0.3rem;
-    display: block;
-}
-
 nav {
     display: flex;
     justify-content: center;
@@ -532,12 +516,9 @@ nav a {
         order: 1;
         padding: 0.5rem;
     }
-    .navbar .title {
-        font-size: 1rem;
-    }
     .navbar img {
         margin: 0;
-        max-width: 3rem;
+        max-width: 200px;
     }
     .mob-container {
         display: block;
@@ -656,14 +637,12 @@ nav a {
         flex-direction: column;
         width: 100%;
         order: 1;
-        padding: 0.5rem;
-    }
-    .navbar .title {
-        font-size: 1.5rem;
+        padding: 1.5rem;
+        overflow-y: hidden;
     }
     .navbar img {
         margin: 0;
-        max-width: 4rem;
+        max-width: 8rem;
     }
     .mob-container {
         display: block;
@@ -730,7 +709,7 @@ nav a {
     }
 }
 
-@media screen and (min-width: 1009px) and (max-width: 1100px) {
+@media screen and (min-width: 1009px) and (max-width: 1500px) {
     .container {
         width: 90%;
         margin-left: 0.5rem;
